# qt6_homework

./: Actions.qml  CMakeLists.txt  Content.qml  Dialogs.qml  Main.qml  button.cpp  button.h  gotocelldialog.cpp  gotocelldialog.h  gotocelldialog.ui  label.cpp  label.h  main.cpp  myjs.js  player  sortdialog.cpp  sortdialog.h  sortdialog.ui  spreadsheet  t1.pro  untitled.qml  untitled.qmlproject  window.cpp  window.h  window.ui
